changed input to signed

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -17,13 +17,13 @@
         android:layout_height="80dp"
         android:layout_marginTop="50dp"
         android:id="@+id/TFnumber1"
-        android:inputType="number"
+        android:inputType="numberSigned"
         android:textSize="25dp"
         android:layout_centerHorizontal="true" />
 
     <EditText
         android:layout_width="200dp"
-        android:inputType="number"
+        android:inputType="numberSigned"
         android:layout_height="80dp"
         android:id="@+id/TFnumber2"
         android:layout_centerHorizontal="true"
